Charybdis now a pickaxe type tool, Attribute Change on Elder Chestplate and Charybdis

--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.wanderlust.shift_desc_info": "§7Hold §6[Shift] §7to reveal additional information",
 
   "item.wanderlust.two_handed": "§7Two-Handed",
+  "item.wanderlust.sweeping": "§7Sweeping",
 
   "item.wanderlust.cutlass": "Corroded Cutlass",
 
