--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -1,8 +1,9 @@
 {
   "item.wanderlust.shift_desc_info": "§7Hold §6[Shift] §7to reveal additional information",
 
-  "item.wanderlust.two_handed": "§7Two-Handed",
+  "item.wanderlust.critless": "§7Critless",
   "item.wanderlust.sweeping": "§7Sweeping",
+  "item.wanderlust.two_handed": "§7Two-Handed",
 
   "item.wanderlust.cutlass": "Corroded Cutlass",
 
