Removal of Hexed Dice, Fixing of Mob Spawning with Item, Rename of Config

--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -7,7 +7,7 @@
 
   "item.wanderlust.non_consumable_crafting_material": "§7Non-Consumable Crafting Material",
 
-  "item.wanderlust.cutlass": "Corroded Cutlass",
+  "item.wanderlust.cutlass": "Cutlass",
 
   "item.wanderlust.elder_spine": "Elder Spine",
 
