--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -13,7 +13,7 @@
 
   "item.wanderlust.charybdis": "Charybdis",
   "item.wanderlust.charybdis.shift_desc_1": "§7Gain §3Vortex §7upon hit",
-  "item.wanderlust.charybdis.shift_desc_2": "§7pulling hit targets toward the user.",
+  "item.wanderlust.charybdis.shift_desc_2": "§7and pulls hit targets toward the user.",
 
   "item.wanderlust.charybdis.shift_desc_3": "§6[Sneak + Use] §7consumes §3Vortex §7to conjure a maelstrom around the user",
   "item.wanderlust.charybdis.shift_desc_4": "§7pulling nearby entities dealing damage to targets near the center.",
@@ -183,6 +183,8 @@
   "subtitles.effect.echo.accumulate": "Echo accumulates damage",
   "subtitles.effect.echo.release": "Echo releases damage",
 
+  "subtitles.item.charybdis.activate": "Charybdis creates whirlpool",
+
   "subtitles.item.dragons_rage.breath": "Dragon's Rage spews breath",
   "subtitles.item.dragons_rage.roar": "Dragon's Rage roars",
 
@@ -267,7 +269,7 @@
 
 
 
-  "creativetab.wanderlust.items": "§6Remnant Relics",
+  "creativetab.wanderlust.items": "§6Wanderlust",
 
 
 
