--- a/src/main/resources/assets/wanderlust/lang/en_us.json
+++ b/src/main/resources/assets/wanderlust/lang/en_us.json
@@ -166,13 +166,13 @@
   "item.wanderlust.catalyst_crystal": "Catalyst Crystal",
   "item.wanderlust.catalyst_crystal.lore_desc_1": "§7Stored Souls: %1$s/%2$s",
 
-  "item.wanderlust.catalyst_crystal.shift_desc_1": "§7Stores souls from entities killed by the user when held.",
+  "item.wanderlust.catalyst_crystal.shift_desc_1": "§7Stores souls from entities killed by the user.",
 
   "item.wanderlust.catalyst_crystal.shift_desc_2": "§6[Use] §7on a sculk catalyst",
-  "item.wanderlust.catalyst_crystal.shift_desc_3": "§7releases some souls from the chalice into the catalyst.",
+  "item.wanderlust.catalyst_crystal.shift_desc_3": "§7releases some souls from the crystal into the catalyst.",
 
   "item.wanderlust.catalyst_crystal.shift_desc_4": "§6[Sneak + Use] §7on a sculk catalyst",
-  "item.wanderlust.catalyst_crystal.shift_desc_5": "§7releases all souls from the chalice into the catalyst.",
+  "item.wanderlust.catalyst_crystal.shift_desc_5": "§7releases all souls from the crystal into the catalyst.",
 
   "item.wanderlust.scylla": "Echo Tuner",
   "item.wanderlust.scylla.shift_desc_1": "§7Applies §3Echo §7on targets",
